--- a/src/Doc/Masa.Blazor.Doc/Demos/Components/Groups/children/ItemGroup/props/ActiveClass.razor
+++ b/src/Doc/Masa.Blazor.Doc/Demos/Components/Groups/children/ItemGroup/props/ActiveClass.razor
@@ -15,9 +15,9 @@
                             OnClick="context.Toggle"
                             RefBack="context.Ref">
                             <ScrollYTransition>
-                                <Element Show="context.Active" Class="text-h2 flex-grow-1 text-center">
+                                <ShowTransitionElement Value="context.Active" Class="text-h2 flex-grow-1 text-center">
                                     Active
-                                </Element>
+                                </ShowTransitionElement>
                             </ScrollYTransition>
                         </MCard>
                     </MItem>
