--- a/src/Doc/Masa.Blazor.Doc/Demos/Components/Groups/children/ItemGroup/props/Mandatory.razor
+++ b/src/Doc/Masa.Blazor.Doc/Demos/Components/Groups/children/ItemGroup/props/Mandatory.razor
@@ -11,9 +11,9 @@
                                Height="200"
                                OnClick="context.Toggle">
                             <ScrollYTransition>
-                                <Element Show="context.Active" Class="text-h2 flex-grow-1 text-center">
+                                <ShowTransitionElement Value="context.Active" Class="text-h2 flex-grow-1 text-center">
                                     Active
-                                </Element>
+                                </ShowTransitionElement>
                             </ScrollYTransition>
                         </MCard>
                     </MItem>
