--- a/src/Doc/Masa.Blazor.Doc/Demos/Components/Groups/children/ItemGroup/usage/Index.razor
+++ b/src/Doc/Masa.Blazor.Doc/Demos/Components/Groups/children/ItemGroup/usage/Index.razor
@@ -12,9 +12,9 @@
                                    Dark 
                                    Height="200">
                                 <ScrollYTransition>
-                                    <Element Show="context.Active" Class="text-h2 flex-grow-1 text-center">
+                                    <ShowTransitionElement Value="context.Active" Class="text-h2 flex-grow-1 text-center">
                                         Active
-                                    </Element>
+                                    </ShowTransitionElement>
                                 </ScrollYTransition>
                             </MCard>
                         }
