--- a/src/Doc/Masa.Blazor.Doc/Demos/Components/FormInputs/children/Slider/props/Discrete.razor
+++ b/src/Doc/Masa.Blazor.Doc/Demos/Components/FormInputs/children/Slider/props/Discrete.razor
@@ -1,12 +1,13 @@
 ﻿<MCard>
     <MCardText>
-        <MSlider @bind-Value="_value"
+        <MSlider TValue="double"
                  Step="10"
                  ThumbLabel="true"
+                 Class="test"
                  Ticks="true"></MSlider>
     </MCardText>
 </MCard>
 
-  @code {
+@code {
     private double _value = 0;
   }
