--- a/src/Doc/Masa.Blazor.Doc/Demos/Components/Groups/children/SlideGroup/props/CustomIcons.razor
+++ b/src/Doc/Masa.Blazor.Doc/Demos/Components/Groups/children/SlideGroup/props/CustomIcons.razor
@@ -11,9 +11,9 @@
                        RefBack="@context.Ref">
                     <MRow Class="fill-height" Align="AlignTypes.Center" Justify="JustifyTypes.Center">
                         <ScaleTransition>
-                            <Element Show="context.Active">
+                            <ShowTransitionElement Value="context.Active">
                                 <MIcon Color="white" Size="48">mdi-close-circle-outline</MIcon>
-                            </Element>
+                            </ShowTransitionElement>
                         </ScaleTransition>
                     </MRow>
                 </MCard>
