--- a/src/Doc/Masa.Blazor.Doc/Demos/Components/Hover/misc/Transition.razor
+++ b/src/Doc/Masa.Blazor.Doc/Demos/Components/Hover/misc/Transition.razor
@@ -2,10 +2,10 @@
     <MCard @attributes="context.Attrs" Class="@($"mx-auto {context.Class}")" Color="grey lighten-4" MaxWidth="600">
         <MImage Src="https://cdn.masastack.com/stack/images/website/masa-blazor/cards/kitchen.png" AspectRatio="@((double)16/9)">
             <ExpandTransition>
-                <Element Show="@context.Hover" Class="transition-fast-in-fast-out orange darken-2 m-card--reveal text-h2 white--text"
+                <ShowTransitionElement Value="@context.Hover" Class="transition-fast-in-fast-out orange darken-2 m-card--reveal text-h2 white--text"
                          Style="height: 100%;display: flex;">
                     $14.99
-                </Element>
+                </ShowTransitionElement>
             </ExpandTransition>
         </MImage>
         <MCardText Class="pt-6" Style="position:relative;">
